--- a/JS.html
+++ b/JS.html
@@ -96,18 +96,18 @@
       //   console.log(mix[3].age);
       //   console.log(mix[4][1]);
 
-        // let mix2 = {
-        //   str: "Hello World",
-        //   num: 12,
-        //   arr: [123, true, "hello"],
-        //   object1: { name: "param", age: 25 },
-        // };
+      // let mix2 = {
+      //   str: "Hello World",
+      //   num: 12,
+      //   arr: [123, true, "hello"],
+      //   object1: { name: "param", age: 25 },
+      // };
 
-        // console.log(mix2);
-        // console.log(mix2.str);
-        // console.log(mix2.arr[1]);
+      // console.log(mix2);
+      // console.log(mix2.str);
+      // console.log(mix2.arr[1]);
 
-        // console.log(mix2.object1.name);
+      // console.log(mix2.object1.name);
       //   console.log(mix2.arr[1]);
       //   console.log(mix2.object1.name);
 
@@ -245,6 +245,123 @@
 
       // console.log(x);
       //  20 ,30,undefined,refence erorr,will not run
+
+      // Day 3 js
+
+      // function add(x,y){
+      //   // let x = 5
+      //   // let y =10
+      //   let z = x+y
+      //   console.log(z);
+      // }
+
+      // add(3,4)
+
+      // function greeting(x){
+      //   console.log(x);
+      // }
+      // greeting("Hello")
+
+      // let value = window.prompt("Enter your name")
+
+      // function add(){
+      //   let number1 =Number(window.prompt("Enter number 1"))
+      //   let number2 =+(window.prompt("Enter number 2"))
+      //   let result = number1 + number2
+      //   console.log(result);
+      // }
+
+      // add()
+
+      // control flow
+
+      // let x = 10;
+
+      // if (x<5) {
+      //   console.log("Successfull");
+      // }
+      // if(x===10){
+      //   console.log("Equal to ");
+      // }
+
+      // if (x===10) {
+      //   console.log("Equal to ");
+      // } else {
+      //   console.log("not equal");
+      // }
+
+      // if (x < 5) {
+      //   console.log("Less than 5");
+      // } else if (x >= 5 && x <= 10) {
+      //   console.log("Lies between 5 and 10");
+      // }
+
+      // else {
+      //   console.log("Greater than 10");
+      // }
+
+      // let Days = Number(window.prompt("Enter a number"));
+
+      // if(Days ===1){
+      //   console.log("Today is Sunday");
+      // }
+
+      // else if(Days ===2){
+      //   console.log("Today is Monday");
+      // }
+
+      // else if(Days ===3){
+      //   console.log("Today is Tuesday");
+      // }
+
+      // else if(Days ===4){
+      //   console.log("Today is Wedenesday");
+      // }
+
+      // else if(Days ===5){
+      //   console.log("Today is Thursday");
+      // }
+
+      // else if(Days ===6){
+      //   console.log("Today is friday");
+      // }
+      // else if(Days ===7){
+      //   console.log("Today is saturday");
+      // }
+      // else{
+      //   console.log("Enter a valid number");
+      // }
+
+      // switch (Days) {
+      //   case 1:
+      //     console.log("today is Sunday");
+      //     break
+      //   case 2:
+      //     console.log("Today is Monday");
+      //     break
+      //   case 3:
+      //     console.log("It's tuesday!");
+      //     break
+      //   default:
+      //     console.log(`I don't know what day it is!`);
+      // }
+
+
+      // let number1 = Number(window.prompt("Please enter a number 1"))
+      // let number2 =Number( window.prompt("Please enter a number 2"))
+
+      // let operetor = window.prompt("Please enter operotor")
+
+      // switch (operetor) {
+      //   case "+":
+      //     console.log(number1 + number2);
+      //     break;
+      
+      //   default:
+      //     break;
+      // }
+
+
     </script>
   </body>
 </html>
